--- a/views/initQuestion.handlebars
+++ b/views/initQuestion.handlebars
@@ -36,14 +36,21 @@
 	               Are you evaluating a subordinate?
 	                </label>
 	        	</div>
-	        </div>
+	        </div> 
            </div>
           </div>
-          <div class="initButton">
-   				 <div class="col-xs-6"><button type="button" id="initQueries" class="btn btn-primary btn-lg">Start
-   				 </button>
-    </div>
-  </div>
+
+          <div class="subEmpId">
+            <h5 class="subIdDesc"> Enter below the Employee ID of the subordinate you are evaluating</h5>
+            <input class="input-subEmpId" type="text" name="subEmpId">
+          </div>
+
+
+      <div class="initButton">
+   			 <div class="col-xs-6">
+            <button type="button" id="initQueries" class="btn btn-primary btn-lg">Start </button>
+         </div>
+      </div>
     </div>
 
 </body>
