--- a/views/initQuestion.handlebars
+++ b/views/initQuestion.handlebars
@@ -41,8 +41,8 @@
           </div>
 
           <div class="subEmpId">
-            <h5 class="subIdDesc"> Enter below the Employee ID of the subordinate you are evaluating</h5>
-            <input class="input-subEmpId" type="text" name="subEmpId">
+            <h5 class="subIdDesc"> Enter below the Employee ID of the subordinate you are evaluating (in the correct case. For eg., AI0001)</h5>
+            <input class="input-subEmpId" type="text" name="subEmpId" value="">
           </div>
 
 
